reimplemented default kits by using a data file instead of hardcoding them.